Rename timetables to events
