# api/openapi.yaml
@@ -29,8 +29,8 @@ tags:
     description: Authentication
   - name: Tasks
     description: Create and manage your tasks
-  - name: Timetable
-    description: Create and manafe your timetable
+  - name: Events
+    description: Create and manafe your events
   - name: NotificationParams
     description: Manage Notification params
 paths:
@@ -181,11 +181,11 @@ paths:
         '405':
           description: Invalid input
 
-  /timetable/set/{taskID}:
+  /event/set/{taskID}:
     post:
-      summary: Add a new timetable
+      summary: Add a new event
       tags:
-        - Timetable
+        - Events
       security:
         - bearerAuth: []
       description: Add a task
@@ -197,11 +197,11 @@ paths:
            required: true
            description: Task id
       requestBody:
-        description: Set timetable task
+        description: Set event task
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SetTimetableTaskReqBody'
+              $ref: '#/components/schemas/SetEventReqBody'
         required: true
       responses:
         '200':
@@ -209,19 +209,19 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimetableTask'
+                $ref: '#/components/schemas/Event'
         '405':
           description: Invalid input
 
-  /timetable:
+  /event:
     get:
-      summary: List timetable tasks
+      summary: List events
       tags:
-        - Timetable
+        - Events
       security:
         - bearerAuth: []
-      description: List timetable tasks
-      operationId: listTimetableTasks
+      description: List events
+      operationId: listEvents
       parameters:
         - in: query
           name: from
@@ -241,22 +241,22 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/TimetableTask'
+                  $ref: '#/components/schemas/Event'
         '405':
           description: Invalid input
     post:
-      summary: Create new timetable task
+      summary: Create new event
       tags:
-        - Timetable
+        - Events
       security:
         - bearerAuth: []
-      description: Create new timetable task
-      operationId: createTimetableTask
+      description: Create new event
+      operationId: createEvent
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateTimetableTaskReqBody'
+              $ref: '#/components/schemas/CreateEventReqBody'
         required: true
       responses:
         '201':
@@ -264,84 +264,84 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimetableTask'
+                $ref: '#/components/schemas/Event'
         '405':
           description: Invalid input
 
-  /timetable/{timetableTaskID}:
+  /event/{eventID}:
     get:
-      summary: Get timetable task
+      summary: Get event
       tags:
-        - Timetable
+        - Events
       security:
         - bearerAuth: []
-      description: Get timetable task
-      operationId: getTimetableTask
+      description: Get event
+      operationId: getEvent
       parameters:
         - in: path
-          name: timetableTaskID
+          name: eventID
           schema:
             type: integer
           required: true
-          description: Timetable task id
+          description: event task id
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimetableTask'
+                $ref: '#/components/schemas/Event'
         '405':
           description: Invalid input
 
     put:
-      summary: Update timetable task
+      summary: Update event
       tags:
-        - Timetable
+        - Events
       security:
         - bearerAuth: []
-      description: List timetable tasks
-      operationId: updateTimetableTask
+      description: Update event
+      operationId: updateEvent
       parameters:
         - in: path
-          name: timetableTaskID
+          name: eventID
           schema:
             type: integer
           required: true
-          description: Timetable task id
+          description: Event task id
       requestBody:
-        description: Update timetable task
+        description: Update Event task
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UpdateTimetableReqBody'
+              $ref: '#/components/schemas/UpdateEventReqBody'
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimetableTask'
+                $ref: '#/components/schemas/Event'
         '405':
           description: Invalid input
 
-  /timetable/{timetableTaskID}/notification-params:
+  /event/{eventID}/notification-params:
     get:
-      summary: Get timetable task notification params
+      summary: Get event notification params
       tags:
-        - Timetable
+        - Events
         - NotificationParams
       security:
         - bearerAuth: []
-      description: Get timetable task notification params
-      operationId: getTimetableTaskNotificationParams
+      description: Get event notification params
+      operationId: getEventNotificationParams
       parameters:
         - in: path
-          name: timetableTaskID
+          name: eventID
           schema:
             type: integer
           required: true
-          description: Timetable task id
+          description: Event id
       responses:
         '200':
           description: Successful operation
@@ -353,21 +353,21 @@ paths:
           description: Invalid input
 
     put:
-      summary: Set timetable task notification params
+      summary: Set Event notification params
       tags:
-        - Timetable
+        - Events
         - NotificationParams
       security:
         - bearerAuth: []
-      description: Set timetable task notification params
-      operationId: setTimetableTaskNotificationParams
+      description: Set event notification params
+      operationId: setEventNotificationParams
       parameters:
         - in: path
-          name: timetableTaskID
+          name: eventID
           schema:
             type: integer
           required: true
-          description: Timetable task id
+          description: Event task id
       requestBody:
         required: true
         content:
@@ -520,18 +520,12 @@ components:
         archived:
           type: boolean
 
-    CreateTimetableTaskReqBody:
+    CreateEventReqBody:
       type: object
       properties:
         message:
           type: string
           example: Message
-        requiredTime:
-          type: integer
-          description: Required time for task in minutes
-          minimum: 1
-        periodic:
-          type: boolean
         start:
           type: string
           format: date-time
@@ -544,7 +538,7 @@ components:
         - periodic
         - start
 
-    SetTimetableTaskReqBody:
+    SetEventReqBody:
       required:
         - start
         - done
@@ -558,7 +552,7 @@ components:
           format: date-time
 
 
-    UpdateTimetableReqBody:
+    UpdateEventReqBody:
       required:
         - finish
         - start
@@ -603,7 +597,7 @@ components:
           example: 5
 
 
-    TimetableTask:
+    Event:
       required:
         - id
         - text
